--- a/patternlab/public/patterns/02-organisms-01-content-types/index.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types/index.html
@@ -2546,31 +2546,35 @@
         <h2 class="pane__title">Highlights</h2> 
         <div class="pane__content">
 
-          <div class="view view--highlights">
+          <div class="view view--card-view">
 
-            <article class="card card__background">
-              <div class="card__content">
-                <h2 class="card__type">Toolkit</h2>
-                <h3 class="card__primary-title"><a href="#">Title</a></h3>
-                <div class="card__author">
-                  <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                  <div class="card__author-name">Buffy Summers</div>
-                  <div class="card__author-date">03/15/2015</div>    
+            <div class="views-row">
+              <article class="card card__background">
+                <div class="card__content">
+                  <h2 class="card__type">Toolkit</h2>
+                  <h3 class="card__primary-title"><a href="#">Title</a></h3>
+                  <div class="card__author">
+                    <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                    <div class="card__author-name">Buffy Summers</div>
+                    <div class="card__author-date">03/15/2015</div>    
+                  </div>
                 </div>
-              </div>
-            </article>
+              </article>
+            </div>
 
-             <article class="card card__background">
-              <div class="card__content">
-                <h2 class="card__type">Toolkit</h2>
-                <h3 class="card__primary-title"><a href="#">Title</a></h3>
-                <div class="card__author">
-                  <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                  <div class="card__author-name">Buffy Summers</div>
-                  <div class="card__author-date">03/15/2015</div>    
+            <div class="views-row">
+              <article class="card card__background">
+                <div class="card__content">
+                  <h2 class="card__type">Toolkit</h2>
+                  <h3 class="card__primary-title"><a href="#">Title</a></h3>
+                  <div class="card__author">
+                    <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                    <div class="card__author-name">Buffy Summers</div>
+                    <div class="card__author-date">03/15/2015</div>    
+                  </div>
                 </div>
-              </div>
-            </article>
+              </article>
+            </div>
     
           </div>
         </div>
@@ -2706,31 +2710,35 @@
         &lt;h2 class=&quot;pane__title&quot;&gt;Highlights&lt;/h2&gt; 
         &lt;div class=&quot;pane__content&quot;&gt;
 
-          &lt;div class=&quot;view view--highlights&quot;&gt;
+          &lt;div class=&quot;view view--card-view&quot;&gt;
 
-            &lt;article class=&quot;card card__background&quot;&gt;
-              &lt;div class=&quot;card__content&quot;&gt;
-                &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
-                &lt;div class=&quot;card__author&quot;&gt;
-                  &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                  &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                  &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+            &lt;div class=&quot;views-row&quot;&gt;
+              &lt;article class=&quot;card card__background&quot;&gt;
+                &lt;div class=&quot;card__content&quot;&gt;
+                  &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                  &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+                  &lt;div class=&quot;card__author&quot;&gt;
+                    &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                    &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                    &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                  &lt;/div&gt;
                 &lt;/div&gt;
-              &lt;/div&gt;
-            &lt;/article&gt;
+              &lt;/article&gt;
+            &lt;/div&gt;
 
-             &lt;article class=&quot;card card__background&quot;&gt;
-              &lt;div class=&quot;card__content&quot;&gt;
-                &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
-                &lt;div class=&quot;card__author&quot;&gt;
-                  &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                  &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                  &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+            &lt;div class=&quot;views-row&quot;&gt;
+              &lt;article class=&quot;card card__background&quot;&gt;
+                &lt;div class=&quot;card__content&quot;&gt;
+                  &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                  &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+                  &lt;div class=&quot;card__author&quot;&gt;
+                    &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                    &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                    &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                  &lt;/div&gt;
                 &lt;/div&gt;
-              &lt;/div&gt;
-            &lt;/article&gt;
+              &lt;/article&gt;
+            &lt;/div&gt;
     
           &lt;/div&gt;
         &lt;/div&gt;
