--- a/patternlab/public/patterns/03-templates-community-detail/03-templates-community-detail.escaped.html
+++ b/patternlab/public/patterns/03-templates-community-detail/03-templates-community-detail.escaped.html
@@ -82,31 +82,35 @@
             &lt;h2 class=&quot;pane__title&quot;&gt;Highlights&lt;/h2&gt; 
             &lt;div class=&quot;pane__content&quot;&gt;
 
-              &lt;div class=&quot;view view--highlights&quot;&gt;
+              &lt;div class=&quot;view view--card-view&quot;&gt;
 
-                &lt;article class=&quot;card card__background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                      &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                      &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                &lt;div class=&quot;views-row&quot;&gt;
+                  &lt;article class=&quot;card card__background&quot;&gt;
+                    &lt;div class=&quot;card__content&quot;&gt;
+                      &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                      &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+                      &lt;div class=&quot;card__author&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
                     &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;
+                  &lt;/article&gt;
+                &lt;/div&gt;
 
-                 &lt;article class=&quot;card card__background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                      &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                      &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                &lt;div class=&quot;views-row&quot;&gt;
+                  &lt;article class=&quot;card card__background&quot;&gt;
+                    &lt;div class=&quot;card__content&quot;&gt;
+                      &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                      &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+                      &lt;div class=&quot;card__author&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
                     &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;
+                  &lt;/article&gt;
+                &lt;/div&gt;
         
               &lt;/div&gt;
             &lt;/div&gt;
