--- a/patternlab/public/patterns/01-molecules-03-navigation/index.html
+++ b/patternlab/public/patterns/01-molecules-03-navigation/index.html
@@ -315,7 +315,7 @@
   &lt;ul class=&quot;pager&quot;&gt;
     &lt;li class=&quot;pager__item pager__item--first&quot;&gt;&lt;a class=&quot;pager__link pager__link--first&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;First page&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item pager__item--previous&quot;&gt;&lt;a class=&quot;pager__link pager__link--previous&quot; rel=&quot;prev&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Previous page&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
-    &lt;li class=&quot;pager__item pager__item--ellipsis&quot; role=&quot;presentation&quot;&gt;&acirc;€&brvbar;&lt;/li&gt;
+    &lt;li class=&quot;pager__item pager__item--ellipsis&quot; role=&quot;presentation&quot;&gt;&hellip;&lt;/li&gt;
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;2&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;3&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;4&lt;/a&gt;&lt;/li&gt;
@@ -325,7 +325,7 @@
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;8&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;9&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item&quot;&gt;&lt;a class=&quot;pager__link&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Page &lt;/span&gt;10&lt;/a&gt;&lt;/li&gt;
-    &lt;li class=&quot;pager__item pager__item--ellipsis&quot; role=&quot;presentation&quot;&gt;&acirc;€&brvbar;&lt;/li&gt;
+    &lt;li class=&quot;pager__item pager__item--ellipsis&quot; role=&quot;presentation&quot;&gt;&hellip;&lt;/li&gt;
     &lt;li class=&quot;pager__item pager__item--next&quot;&gt;&lt;a class=&quot;pager__link pager__link--next&quot; rel=&quot;next&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Next page&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
     &lt;li class=&quot;pager__item pager__item--last&quot;&gt;&lt;a class=&quot;pager__link pager__link--last&quot; href=&quot;#&quot;&gt;&lt;span class=&quot;element-invisible&quot;&gt;Last page&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
